Updated craftsman title to Eleventy developer.

--- a/development/index.html
+++ b/development/index.html
@@ -1,5 +1,5 @@
 ---
-title: Front End Engineer
+title: Eleventy Developer
 layout: base.html
 description: "Eduardo's online journal, where I share articles about software engineering."
 css:
@@ -15,7 +15,7 @@ css:
             <p class="bio-item-author">Eduardo Javier Uribe</p>
         </li> -->
         <li class="bio-item">
-            <p class="bio-item-title">Front End Engineer</p>
+            <p class="bio-item-title">Eleventy Developer</p>
         </li>
         <li class="bio-item">
             <address class="bio-item-address">Peoria, AZ 85345</address>
