--- a/index.html
+++ b/index.html
@@ -1,63 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eduardo Javier Uribe Cruz</title>
 
     <style>
-        html, body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-size: 16px;
-            height: 100vw;
-            margin: 0;
-            width: 100vw;
-        }
+      html,
+      body {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+          Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+          sans-serif;
+        font-size: 16px;
+        height: 100vw;
+        margin: 0;
+        width: 100vw;
+      }
 
-        main {
-            padding: 1rem;
-            display: flex;
-            justify-content: space-between;
-        }
+      main {
+        padding: 1rem;
+        display: flex;
+        justify-content: space-between;
+      }
 
-        h1 {
-            font-size: 1rem;
-            font-weight: 600;
-            line-height: 1.5;
-            margin: 0;
-        }
+      h1 {
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        margin: 0;
+      }
 
-        p {
-            margin: 0;
-        }
+      p {
+        margin: 0;
+      }
 
-        p span {
-            font-style: italic;
-        }
+      p span {
+        font-style: italic;
+        font-weight: 600;
+      }
 
-        ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
+      ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        text-align: right;
+      }
 
-        ul li a {
-            color: black;
-        }
+      ul li a {
+        color: black;
+      }
+
+      ul li a span {
+        /* font-style: italic; */
+        font-weight: 600;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <span>
-            <h1>Eduardo Uribe Cruz</h1>
-            <p>Software Engineer <span>Specializing in JavaScript</span></p>
-        </span>
-        
-        <ul>
-            <li>
-                <a href="/journal/">Journal</a>
-            </li>
-        </ul>
+      <span>
+        <h1>Eduardo Uribe Cruz</h1>
+        <p>
+          Software Engineer
+          <span>Specializing in Full-Stack JavaScript Web Applications</span>
+        </p>
+      </span>
+
+      <ul>
+        <li>
+          <a href="/journal/">Journal</a>
+        </li>
+        <li>
+          <a href="https://eleventy.gumroad.com/l/reetue"
+            >eBook <span>Nunjucks in Eleventy</span></a
+          >
+        </li>
+      </ul>
     </main>
-</body>
+  </body>
 </html>
